@@ -3,3 +3,7 @@
 ## New Features
 
 - begin work on login -- kaneryu on 2025-03-09
+
+## Bugfixes
+
+- make progressbar a bit larger -- kaneryu on 2025-03-12
