@@ -4,6 +4,10 @@
 
 - begin work on login -- kaneryu on 2025-03-09
 
+## Bugfixes
+
+- make progressbar a bit larger -- kaneryu on 2025-03-12
+
 
 
 # Version 0.28
